redimensionnement image, correction erreurs contraste- balise footer

--- a/style.css
+++ b/style.css
@@ -1,22 +1,53 @@
 /*Variables*/
-
-var(couleur-fond, #FFFFFF);
-var(couleur-btn, #fb956a);
-
-/*nouveau css
-.flex-position{
-    display:flex;
-    justify-content: column;
+:root{
+    --couleur-fond :  #FFFFFF;
+    --couleur-btn :  #F3976C;
+    --couleur-btn-hover:#85310A;
+    --couleur-police-btn:#212121;
 }
-*/
+
+/*class ajoutées:--->*/
+
+.h2spe{
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #333333!important;
+}
+
+#menu{
+    padding-top: 2rem;
+    display:flex;
+    flex-direction: column;
+    margin-bottom: -2rem;
+}
+
+#menu-ul{
+    padding-top: 5rem;
+    float:right;
+}
+
+#navbar-header{
+    margin-bottom: 3rem;;
+}
+
+
+/*---->class ajoutées:*/
 
 body {
     margin: 0;
     padding: 0;
-    background-color: var(couleur-fond);
+    background-color: var(--couleur-fond);
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+#navbarcontact{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 a,
@@ -36,7 +67,7 @@ a:hover {
     bottom: 0;
     width: 100%;
     z-index: 100000;
-    background: var(couleur-fond) url("img/pageload-spinner.gif") no-repeat center center;
+    background: var(--couleur-fond) url("img/pageload-spinner.gif") no-repeat center center;
 }
 
 .bloc {
@@ -330,7 +361,6 @@ a:hover {
 .navbar .nav {
     padding-top: 2px;
     margin-right: -16px;
-    float: right;
     z-index: 1;
 }
 
@@ -376,9 +406,6 @@ a:hover {
 
 @media (min-width: 768px) {
     .site-navigation {
-        position: absolute;
-        top: 50%;
-        right: 20px;
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
     }
@@ -666,6 +693,10 @@ a {
     color: #575757!important;
 }
 
+footer p{
+    color:red;
+}
+
 .container {
     max-width: 1000px;
 }
@@ -708,7 +739,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: var(couleur-fond)!important;
+    color: var(--couleur-fond)!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -724,6 +755,8 @@ h2 {
     font-size: 22px;
     line-height: 1.4em;
 }
+
+
 
 h3 {
     font-size: 15px;
@@ -752,7 +785,7 @@ h4 {
 }
 
 .white {
-    color: var(couleur-fond)!important;
+    color: var(--couleur-fond)!important;
 }
 
 .portfolio-thumb {
@@ -779,7 +812,7 @@ h4 {
 }
 
 .bgc-white {
-    background-color: var(couleur-fond);
+    background-color: var(--couleur-fond);
 }
 
 .bgc-dark-slate-blue {
@@ -787,25 +820,26 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #aa9f9a;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color:#ffffff!important;
+   
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: var(couleur-fond)!important;
+    background: var(--couleur-btn);
+    color: var(--couleur-btn-police)!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: var(couleur-fond)!important;
+    background: #85310A!important;
+    color: var(--couleur-police-btn)!important;
 }
 
 .ltc-white {
-    color: var(couleur-fond)!important;
+    color: var(--couleur-fond)!important;
 }
 
 .ltc-white:hover {
